[gd_scene load_steps=9 format=3 uid="uid://ewui18jjcr1r"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_uycx0"]

[sub_resource type="Environment" id="Environment_wuqtq"]
ssao_enabled = true

[sub_resource type="Animation" id="Animation_i5l0a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_6dngg"]
resource_name = "head_bob"
length = 0.3
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 2.24323, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.04, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_smdo2"]
resource_name = "head_tilt_left"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 0.5, 25),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.0436332, -0.00349066), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_335y0"]
resource_name = "head_tilt_right"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 0.5, 25),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.0436332, 0.00349066), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_06l7j"]
resource_name = "take_damage"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(0.233, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0.075), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(0.233, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.101229, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ylb84"]
_data = {
"RESET": SubResource("Animation_i5l0a"),
"head_bob": SubResource("Animation_6dngg"),
"head_tilt_left": SubResource("Animation_smdo2"),
"head_tilt_right": SubResource("Animation_335y0"),
"take_damage": SubResource("Animation_06l7j")
}

[node name="player" type="Node3D"]
script = ExtResource("1_uycx0")

[node name="Camera3D" type="Camera3D" parent="."]
environment = SubResource("Environment_wuqtq")

[node name="RayFront" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, -2.5)

[node name="RayBack" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, 2.5)

[node name="RayRight" type="RayCast3D" parent="."]
target_position = Vector3(2.5, 0, 0)

[node name="RayLeft" type="RayCast3D" parent="."]
target_position = Vector3(-2.5, 0, 0)

[node name="OmniLight3D" type="OmniLight3D" parent="."]
shadow_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ylb84")
}
